# ota-backend

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePacking.cmake  README.md  configure  vs22_arm_debug.sln  vs22_arm_debug.vcxproj
.github/scripts/: do_compile.sh  do_package.sh
.github/workflows/: manual.yml
assets/: wrapper_apt2json.sh
assets/debian/: postinst.in  postrm.in  prerm.in  systemd-template.service.in
libs/my_utils/: safe_delete.h  safe_json.cpp  safe_json.h
src/: handler_get_codux_boot.cpp  handler_get_codux_static.cpp  handler_get_root.cpp  handler_post_default.cpp  http_websocket.cpp  main.cpp
src/backend/: http_send_file.cpp  http_server.h  http_utils.cpp
tests/: CMakeLists.txt  minunit.h  test_template_1.cpp  test_template_2.cpp  test_template_3.cpp
